fixas spelarklass, alla statiska saker måste bort.

--- a/src/Serverside Code/Game Code/Game Code.VS2010.csproj
+++ b/src/Serverside Code/Game Code/Game Code.VS2010.csproj
@@ -49,6 +49,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game.cs" />
+    <Compile Include="Movement\BlObject.cs" />
+    <Compile Include="Movement\Config.cs" />
+    <Compile Include="Movement\ItemId.cs" />
+    <Compile Include="Movement\PhysicsPlayer.cs" />
+    <Compile Include="Movement\SynchronizedObject.cs" />
+    <Compile Include="Movement\SynchronizedSprite.cs" />
     <Compile Include="Player.cs" />
   </ItemGroup>
   <ItemGroup>
