--- a/src/Serverside Code/Game Code/Game Code.VS2010.csproj
+++ b/src/Serverside Code/Game Code/Game Code.VS2010.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EE092.cs" />
     <Compile Include="EE070.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Movement\BlObject.cs" />
