Compress-algorimer fixade
Otestade, men skulle ändå vara förvånad om det är fel på dem.

--- a/src/Serverside Code/Game Code/Game Code.VS2010.csproj
+++ b/src/Serverside Code/Game Code/Game Code.VS2010.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Movement\SynchronizedObject.cs" />
     <Compile Include="Movement\SynchronizedSprite.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="utlity\Compressor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
